2008-11-03  Oliver Hader  <oliver@typo3.org>

	* Added feature #9654: Enable includeLibs also for USER and COA objects
	* Fixed bug #9724: Editing shortcuts does not work anymore

2008-11-01  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #8715: non-admins can not import pages from their own directory (thanks to Johannes Pieper)

2008-11-01  Oliver Hader  <oliver@typo3.org>

	* Added feature #6637: Integrate possibility to reverse order of rootline HMENU (thanks to Ralf Hettinger)
	* Fixed bug #9715: Editing records with OpenDocs enabled does not work
	* Added feature #9094: Make simulate static a system extension (patch by Benjamin Mack)
	* Fixed bug #9632: Multiple fileuploads into folders with special characters (umlauts) not possible (thanks to Marcus Krause)

2008-10-31  Jeff Segars  <jeff@webempoweredchurch.org>

	* Added feature #6626: config.fileTarget for link target on files (thanks to Ralf Hettinger)
	* Added feature #3787: New option TSFE.jumpURL_HTTPStatusCode = 30x (thanks to Stefan Geith)

2008-10-31  Ingo Renner  <ingo@typo3.org>

	* cleanup: removed the include for an interface that is loaded in backend.php already and therefore is present always

2008-10-31  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9571: Additional condition required to check SSL status in class.t3lib_div.php (thanks to Christian Kuhn)
	* Fixed bug #9659: TCEmain wrongly tests required input-type fields (thanks to Francois Suter)
	* Fixed bug #8399: field tablename in sys_refindex too short (thanks to Steffen Kamper)
	* Cleanup: Updated NEWS.txt

2008-10-31  Benjamin Mack  <benni@typo3.org>

	* Included the Javascript Widget Framework extJS in the TYPO3

2008-10-30  Ingo Renner  <ingo@typo3.org>

	* Fixed an inconsitency with between the name, the documentation and the functionality of method loadByTag() in the new caching framework

2008-10-29  Ingo Renner  <ingo@typo3.org>

	* Added feature #9591: Integrate sys_actions into toolbar (contributions by Steffen Kamper)